[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/player/Player.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0.372549, 0.0509804, 1 )

[sub_resource type="PrismMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.894118, 0.894118, 0.894118, 1 )

[sub_resource type="CapsuleShape" id=5]

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Mesh" type="Spatial" parent="."]

[node name="Body" type="MeshInstance" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1.2, 0, 1, -5.24537e-08, 0, 1.8, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Head" type="MeshInstance" parent="Mesh"]
transform = Transform( 0.5, 0, 0, 0, -0.5, 4.37114e-08, 0, -4.37114e-08, -0.5, 0, 2.8, -0.5 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1.2, 0, 1, -5.24537e-08, 0, 1.8, 0 )
shape = SubResource( 5 )

[node name="CameraRoot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="CameraPivot" type="Spatial" parent="CameraRoot"]

[node name="CameraSpringArm" type="SpringArm" parent="CameraRoot/CameraPivot"]
spring_length = 10.0

[node name="Camera" type="Camera" parent="CameraRoot/CameraPivot/CameraSpringArm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
